--- a/Login.html
+++ b/Login.html
@@ -100,6 +100,7 @@
               setTimeout(function() {
                 document.getElementById('Emaili').value = ''
                 document.getElementById('Passwordi').value = ''
+                localStorage.setItem('useremail',email)
                 location.replace('Home.html')
   
             }, 3000);
